--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -1,6 +1,13 @@
-DB_HOST=localhost
-DB_PORT=5432
+# Основная база данных
 DB_USER=fincraft_user
 DB_PASSWORD=fincraft_password
 DB_NAME=fincraft_db
-DB_DSN=postgres://fincraft_user:fincraft_password@localhost:5432/fincraft_db?sslmode=disable
+DB_HOST=localhost
+DB_PORT=5432
+
+# Тестовая база данных
+TEST_DB_USER=test_user
+TEST_DB_PASSWORD=test_password
+TEST_DB_NAME=test_db
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5433
